=====================

#### thtk
- Improvements to the CMake build process.
- thlzss.h and thcrypt.h are now part of the API.
- We've set up GitHub Actions for automatic builds.

#### thanm
- New thanm spec format. See <https://github.com/thpatch/thtk/pull/86> for more
  details. The old format is not supported anymore. Use thanm.old for it.
- Support for TH18, TH185 has been added.

#### thanm.old
- Will be removed in the next release.
- Support for TH18, TH185 has been added.
- You can now specify the version for the -l command.
  This is required for correct dumping of TH18, TH185.

#### thecl
- Fix and/or add the following instruction formats:
    th06 71-74, 90
    th08 14, 19, 72, 84-86, 118, 119, 152
    th13 18. 19, 20, 24
- The eclmap format has been changed. It's documented in the thecl manual.
  A converter is available in contrib/eclmapcvt.awk.
- Allow multiple mnemonics for the same instruction.
- Allow eclmap signatures for timeline instructions.
- The parser grammar has been reworked to be completely unambiguous.
- Control statements now require parenthesis around expressions.
  E.g. if (x) goto y; instead of if x goto y;
- More escape sequences are supported: \r \n \0.
- Unary plus operator added.
- Expressions are compile-time evaluated, and constant expressions are allowed
  in more places.
- Added #line directive.
- Added insdef statement for defining new instructions.
- Support for TH18, TH185 has been added.
- Numerous bug-fixes.
- Add -x option for outputting address information for instructions.
- Add -C option for changing the current directory after opening the archive.

#### thdat
- Automatic version detection now supports th165, th17, th18 and th185.
- Detection works better with renamed files.
- Support for TH18, TH185 has been added.
- Improve extraction speed.
- Add -g option to enable globing on extracted filenames.
  Example: thdat -gx18 th18.dat "*.ecl"

#### thmsg
- Support for TH18, TH185 has been added.

#### thstd